feat: Add get user by username endpoint
